release 1.8